--- a/index.html
+++ b/index.html
@@ -24,7 +24,22 @@
     <section class="categoria">
         <h2> mais videos </h2>
         <div class="chamada-videos"></div>
-        <a href=""
-        <img src=""
+        <a href="https://www.youtube.com/watch?v=zIQ6t_GrDyU"
+        <img src="https://img.youtube.com/vi/zIQ6t_GrDyU/maxresdefault.jpg"
+        </a
+        <a href="https://www.youtube.com/watch?v=KtagMTnXCjI"
+        <img src="https://img.youtube.com/vi/KtagMTnXCjI/maxresdefault.jpg"
+        </a
+        <a href="https://www.youtube.com/watch?v=IdTMJ0kVjzw"
+        <img src="https://img.youtube.com/vi/IdTMJ0kVjzw/maxresdefault.jpg"
+        </a
+        <a href="https://www.youtube.com/watch?v=bmvBqZKNSbQ"
+        <img src="https://img.youtube.com/bmvBqZKNSbQ/maxresdefault.jpg"
+        </a
+
+
+    </div>
+</section>
+
 </body>
 </html>
